--- a/package.json
+++ b/package.json
@@ -12,18 +12,24 @@
     "newpatch": "npm version patch -m 'Build %s'",
     "newminor": "npm version minor -m 'Build %s'",
     "newmajor": "npm version major -m 'Build %s'",
-    "version": "npm run build-all && git add -A dist",
+    "version": "conventional-changelog -p angular -i CHANGELOG.md -s && npm run build-all && git add -A dist",
+    "postversion": "npm run commit-changelog",
+    "commit-changelog": "git add CHANGELOG.md && git commit -m 'update CHANGELOG.md' || echo echo",
     "build": "echo \"Run build...\" && rollup -c && echo \"Finish build...\"",
     "build-prod": "echo \"Run build prod...\" && NODE_ENV='production' rollup -c && echo \"Finish build...\"",
-    "build-all": "npm run build && npm run build-prod"
+    "build-all": "npm run build && npm run build-prod",
+    "commitmsg": "commitlint -e $GIT_PARAMS"
   },
   "devDependencies": {
+    "@commitlint/cli": "^6.2.0",
+    "@commitlint/config-conventional": "^6.1.3",
     "babel-core": "^6.26.3",
     "babel-plugin-syntax-async-functions": "^6.13.0",
     "babel-plugin-transform-es2015-typeof-symbol": "^6.23.0",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-plugin-transform-regenerator": "^6.26.0",
     "babel-preset-es2015-rollup": "^3.0.0",
+    "husky": "^0.14.3",
     "rollup": "^0.59.3",
     "rollup-plugin-babel": "^3.0.4",
     "rollup-plugin-commonjs": "^9.1.3",
@@ -31,6 +37,7 @@
     "rollup-plugin-minify": "^1.0.3",
     "rollup-plugin-node-resolve": "^3.3.0",
     "rollup-plugin-progress": "^0.4.0",
-    "rollup-plugin-replace": "^2.0.0"
+    "rollup-plugin-replace": "^2.0.0",
+    "standard-version": "^4.4.0"
   }
 }
