chore(package): update scripts

--- a/package.json
+++ b/package.json
@@ -9,12 +9,12 @@
   "author": "Anatoly Kolesov <kolesoffac@gmail.com>",
   "license": "Apache-2.0",
   "scripts": {
-    "newpatch": "npm version patch -m 'Build %s'",
-    "newminor": "npm version minor -m 'Build %s'",
-    "newmajor": "npm version major -m 'Build %s'",
+    "newpatch": "npm version patch -m 'chore(build): %s'",
+    "newminor": "npm version minor -m 'chore(build): %s'",
+    "newmajor": "npm version major -m 'chore(build): %s'",
     "version": "conventional-changelog -p angular -i CHANGELOG.md -s && npm run build-all && git add -A dist",
     "postversion": "npm run commit-changelog",
-    "commit-changelog": "git add CHANGELOG.md && git commit -m 'update CHANGELOG.md' || echo echo",
+    "commit-changelog": "git add CHANGELOG.md && git commit -m 'chore(changelog): update CHANGELOG.md' || echo echo",
     "build": "echo \"Run build...\" && rollup -c && echo \"Finish build...\"",
     "build-prod": "echo \"Run build prod...\" && NODE_ENV='production' rollup -c && echo \"Finish build...\"",
     "build-all": "npm run build && npm run build-prod",
